# Forecastle

./: HACKATHON_PROTOTYPE_REPORT.md  README.md  codebase_audit.md  docker-compose.yml  implementation_plan.md  roadmap_1.md
backend/: alembic.ini  pyproject.toml  requirements.txt  synthetic_sales.csv
backend/alembic/: env.py
backend/alembic/versions/: 18c3bf0ed806_add_sales_table.py  d86e99418c93_initial_schema.py  df8cb4e4d1b2_add_forecast_signal_alert_tables.py  f1d9dc14af4f_add_model_registry.py
backend/app/: config.py  main.py
backend/app/api/: alerts.py  forecasts.py  health.py  products.py  router.py  signals.py
backend/app/db/: seed.py  session.py
backend/app/ingestion/: __init__.py  base.py  news_collector.py  social_collector.py  supplier_collector.py  weather_collector.py
backend/app/ml/: feature_engine.py  model_registry.py  pipeline.py  prophet_model.py  xgboost_model.py
backend/app/models/: __init__.py  alert.py  forecast.py  model_registry.py  product.py  sales.py  signal.py
backend/app/schemas/: __init__.py  alert.py  forecast.py  product.py  signal.py
backend/app/services/: alert_service.py  explanation_service.py  forecast_service.py  signal_service.py
backend/app/tasks/: celery_app.py  forecast_tasks.py  ingestion_tasks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: alerts.js  client.js  forecasts.js  products.js  signals.js
frontend/src/pages/: Dashboard.jsx  Products.jsx  Settings.jsx  Signals.jsx
scripts/: generate_synthetic_data.py
(+20 files in other folders)
